新增規則連結

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>國民黨立委過河遊戲</h1>
+    <a href="rules.html" target="_blank" class="rules-link">(查看遊戲規則)</a>
     <div class="game-container">
     <div id="bank-china" class="bank">
         <h2>中國 (China)</h2>
