--- a/rules.html
+++ b/rules.html
@@ -79,7 +79,7 @@
             <li><span class="danger">【傅崑萁沈船】</span><br>
                 傅崑萁不會開船。如果他試圖掌舵 (例如獨自一人在船上，或搶舵)，船就會沈沒，他會說「都是中央的錯」。</li>
             <li><span class="danger">【解放軍懲罰】</span><br>
-                如果發生沈船事件，且當時中國岸上人數**不足 5 人**，解放軍會將中國岸上的所有人推入海中。如果中國岸上因此全滅，台灣岸上的人也會被處刑。</li>
+                如果發生沈船事件，且當時中國岸上人數不足 5 人，解放軍會將中國岸上的所有人推入海中。如果中國岸上因此全滅，台灣岸上的人也會被處刑。</li>
         </ul>
 
         <h2>👤 角色特殊互動</h2>
@@ -93,14 +93,13 @@
             <li><strong>羅智強：</strong>
                 <ul>
                     <li>跟誰同船，對方就要付 100 萬買書 (傅有 500 萬，其他人 200 萬)。</li>
-                    <li>(推論：傅可搭 5 次，其他人只能搭 2 次)。</li>
                     <li>如果對方沒錢，羅智強會被丟下船。</li>
                 </ul>
             </li>
             <li><strong>王鴻薇：</strong>
                 <ul>
-                    <li>(不會開船) 只能由「女駕駛」載。唯一解：<strong>鄭麗文</strong>。</li>
-                    <li>跟**任何男立委**同船，她會把男立委推下船。</li>
+                    <li>(不會開船)</li>
+                    <li>跟任何男立委同船，她會把男立委推下船。</li>
                     <li>跟 <strong>徐巧芯</strong> 同船，她會把徐巧芯丟下船。</li>
                     <li>在「台灣岸上」時，如果 (羅/傅/韓/朱) 四人都不在場，她會隨機推一個男立委下海。</li>
                 </ul>
@@ -112,7 +111,7 @@
             </li>
             <li><strong>徐巧芯：</strong>
                 <ul>
-                    <li>(不會開船) 唯一能壓制她在船上罵人的人是 <strong>鄭麗文</strong>。 (唯一解：必須由鄭麗文載)。</li>
+                    <li>(不會開船) 唯一能壓制她在船上罵人的人是 <strong>鄭麗文</strong>。 </li>
                 </ul>
             </li>
             <li><strong>葉元之：</strong>
