--- a/rules.html
+++ b/rules.html
@@ -60,8 +60,8 @@
 
         <h2>🎯 遊戲目標</h2>
         <ul>
-            <li><span class="safe">玩家勝利 (投誠)：</span> <strong>存活 5 人 (含) 以上</strong>，並且所有倖存者都抵達中國 (左岸)。</li>
-            <li><span class="danger">台灣人民勝利 (失敗)：</span> 所有立委都死亡，或者倖存者雖抵達中國但不足 5 人。</li>
+            <li><span class="safe">國民黨立委投誠成功：</span> <strong>存活 5 人 (含) 以上</strong>，並且所有倖存者都抵達中國 (左岸)。</li>
+            <li><span class="danger">台灣人民勝利：</span> 所有立委都死亡，或者倖存者雖抵達中國但不足 5 人。</li>
         </ul>
 
         <h2>🚢 基礎規則</h2>
@@ -75,7 +75,7 @@
         <h2>⚠️ 關鍵規則 (必讀)</h2>
         <ul>
             <li><span class="danger">【鄭麗文計時器】</span><br>
-                鄭麗文**必須是前 5 位 (含) 抵達中國的成員之一**。如果她是第 6 位或更晚抵達，她會弄沉船，導致所有還在台灣 (右岸) 的人被以叛國罪處刑。</li>
+                鄭麗文必須是前 5 位 (含) 抵達中國的成員之一。如果她是第 6 位或更晚抵達，她會弄沉船，導致所有還在台灣 (右岸) 的人被以叛國罪處刑。</li>
             <li><span class="danger">【傅崑萁沈船】</span><br>
                 傅崑萁不會開船。如果他試圖掌舵 (例如獨自一人在船上，或搶舵)，船就會沈沒，他會說「都是中央的錯」。</li>
             <li><span class="danger">【解放軍懲罰】</span><br>
