--- a/demo.html
+++ b/demo.html
@@ -479,6 +479,8 @@
             koCoughed = false;
         }
         render();
+        
+        setTimeout(checkWin, 100);
     }
 
     function openDiceModal() {
